--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "HoustonE",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
