--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.10"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
