--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "HoustonE",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
